; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_target.c_target_close.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_target.c_target_close.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.target_ops = type { i32 (i32)*, i32 (%struct.target_ops*, i32)* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @target_close(%struct.target_ops* %0, i32 %1) #0 {
  %3 = alloca %struct.target_ops*, align 8
  %4 = alloca i32, align 4
  store %struct.target_ops* %0, %struct.target_ops** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.target_ops*, %struct.target_ops** %3, align 8
  %6 = getelementptr inbounds %struct.target_ops, %struct.target_ops* %5, i32 0, i32 1
  %7 = load i32 (%struct.target_ops*, i32)*, i32 (%struct.target_ops*, i32)** %6, align 8
  %8 = icmp ne i32 (%struct.target_ops*, i32)* %7, null
  br i1 %8, label %9, label %16

9:                                                ; preds = %2
  %10 = load %struct.target_ops*, %struct.target_ops** %3, align 8
  %11 = getelementptr inbounds %struct.target_ops, %struct.target_ops* %10, i32 0, i32 1
  %12 = load i32 (%struct.target_ops*, i32)*, i32 (%struct.target_ops*, i32)** %11, align 8
  %13 = load %struct.target_ops*, %struct.target_ops** %3, align 8
  %14 = load i32, i32* %4, align 4
  %15 = call i32 %12(%struct.target_ops* %13, i32 %14)
  br label %28

16:                                               ; preds = %2
  %17 = load %struct.target_ops*, %struct.target_ops** %3, align 8
  %18 = getelementptr inbounds %struct.target_ops, %struct.target_ops* %17, i32 0, i32 0
  %19 = load i32 (i32)*, i32 (i32)** %18, align 8
  %20 = icmp ne i32 (i32)* %19, null
  br i1 %20, label %21, label %27

21:                                               ; preds = %16
  %22 = load %struct.target_ops*, %struct.target_ops** %3, align 8
  %23 = getelementptr inbounds %struct.target_ops, %struct.target_ops* %22, i32 0, i32 0
  %24 = load i32 (i32)*, i32 (i32)** %23, align 8
  %25 = load i32, i32* %4, align 4
  %26 = call i32 %24(i32 %25)
  br label %27

27:                                               ; preds = %21, %16
  br label %28

28:                                               ; preds = %27, %9
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
